--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
+        <file>step1_1.qml</file>
+        <file>main_page.qml</file>
+        <file>MyButton.qml</file>
     </qresource>
 </RCC>
