--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -1,7 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>step1_1.qml</file>
-        <file>main_page.qml</file>
+        <file>main.qml</file>
         <file>MyButton.qml</file>
+        <file>SceneSelectionPanel.qml</file>
     </qresource>
 </RCC>
