--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -1,8 +1,9 @@
 <RCC>
     <qresource prefix="/">
-        <file>step1_1.qml</file>
+        <file>step1list.qml</file>
         <file>main.qml</file>
         <file>MyButton.qml</file>
         <file>SceneSelectionPanel.qml</file>
+        <file>step1camera.qml</file>
     </qresource>
 </RCC>
